// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <CardImage> to render properly 1`] = `
<div
  className="gds-form-group__checkbox custom-class gds-form-group__checkbox--xs"
  style={
    {
      "width": 140,
    }
  }
>
  <label
    className="gds-form-group__checkbox-label"
  >
    <input
      className="gds-form-group__checkbox-input"
      type="checkbox"
    />
    <span
      className="gds-form-group__checkbox-indicator"
    />
    Check Me
  </label>
</div>
`;

exports[`Expect <CardImage> to render with other props 1`] = `
<div
  className="gds-form-group__checkbox custom-class gds-form-group__checkbox--xs"
  style={
    {
      "width": 140,
    }
  }
>
  <label
    className="gds-form-group__checkbox-label"
  >
    <input
      className="gds-form-group__checkbox-input"
      onChange={[MockFunction]}
      type="checkbox"
      value="foo"
    />
    <span
      className="gds-form-group__checkbox-indicator"
    />
    Check Me
  </label>
</div>
`;
